updated index.html with meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Rhodlib Blog" content="This is my blog about web development" />
+    <meta name="Amaya's Blog" content="This is my blog regarding Cofounders Town task." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -105,7 +105,7 @@
       gtag("config", "UA-164932214-1");
     </script>
     <!-- /Google analitycs -->
-    <title>Rhodlib Blog</title>
+    <title>Amaya's Blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
